# sudoverse-xamarin

./: .gitignore  LICENSE  README.md  prepare-engine.bat  rustup-targets.bat
app/: App.sln  COPYRIGHT_NOTICE.txt  Sudoverse.sln  Test.cs  main.tscn  project.godot
app/Engine/Engine.Android/: Engine.Android.csproj  EngineSo.cs
app/Engine/Engine.UWP/: Engine.UWP.csproj  EngineDll.cs
app/Engine/Engine.iOS/: Engine.iOS.csproj  Structs.cs
app/Sudoverse/: App.xaml  App.xaml.cs  EditorPage.xaml  EditorPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Sudoku.cs  SudokuPageLayout.cs  Sudoverse.csproj
app/Sudoverse/Sudoverse/: App.xaml  App.xaml.cs  Config.cs  EditorOptionsPage.xaml  EditorOptionsPage.xaml.cs  EditorPage.xaml  EditorPage.xaml.cs  ISudokuEngine.cs  KeyListenerPage.cs  (+19 more)
app/Sudoverse/Sudoverse.Android/: AndroidSudokuEngine.cs  MainActivity.cs  Sudoverse.Android.csproj  TouchEffect.cs
app/Sudoverse/Sudoverse.UWP/: App.xaml  App.xaml.cs  KeyListenerPageRenderer.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Sudoverse.UWP.csproj  TouchEffect.cs  UwpSudokuEngine.cs
app/Sudoverse/Sudoverse.iOS/: AppDelegate.cs  Info.plist  Main.cs  Sudoverse.iOS.csproj  TouchEffect.cs  TouchRecognizer.cs
app/engine/: engine.gdnlib  engine.gdns
engine/: Cargo.toml
engine/engine/: Cargo.toml
engine/engine-dynamic/: Cargo.toml
engine/engine-static/: Cargo.toml
engine/engine/src/: check_response.rs  constraint.rs  fill_response.rs  lib.rs  solve.rs  sync.rs
engine/engine/src/generate/: mod.rs  sandwich.rs  simple.rs
engine/src/: lib.rs
(+77 files in other folders)
