[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13"
rand = "0.8"
serde_json = "1.0"
sudoku-variants = { git = "https://github.com/florian1345/sudoku-variants" }
